<resources>
    <string name="app_name">HYV_HPV_ClinicBooking</string>
    <string name="title_homepage">HYV-HPV HOME</string>
    <string name="labelHome">TRANG CHỦ</string>
    <string name="labelSearch">TÌM KIẾM</string>
    <string name="labelLogin">ĐĂNG NHẬP</string>
    <string name="labelLogout">ĐĂNG XUẤT</string>
    <string name="labelRegister">ĐĂNG KÝ</string>
    <string name="labelAbout">HỖ TRỢ</string>
    <string name="labelSetting">CÀI ĐẶT</string>
    <string name="labelProfile">HỒ SƠ</string>
    <string name="labelDoctor">BÁC SĨ</string>
    <string name="labelPatient">BỆNH NHÂN</string>
    <string name="labelAppoinment">ĐẶT</string>
    <string name="labelSchedule">LỊCH TRÌNH</string>
    <string name="labelPrescription">ĐIỀU TRỊ</string>
    <string name="labelHistory">LỊCH SỬ</string>
    <string name="labelAppointmentHistory">CUỘC HẸN ĐÃ ĐẶT</string>
    <string name="labelUserProfile">THÔNG TIN CÁ NHÂN</string>
    <string name="labelOncomingAppointment">Cuộc hẹn sắp tới</string>
    <string name="labelLastestAppointment">Cuộc hẹn vừa kết thúc</string>
    <string name="labelTopDoctor">Bác sĩ ưu tú</string>
    <string name="labelSeeAll">Xem tất cả</string>
    <string name="labelConfirm">Xác nhận</string>
    <string name="labelNotification">Thông báo</string>
    <string name="labelNotificationDoctor">Cuộc hẹn cần được duyệt</string>

    <!-- For Login / Register page -->
    <string name="toastLoginSuccess">Đăng nhập thành công</string>
    <string name="toastLoginFail">Đăng nhập thất bại</string>
    <string name="toastLoginNotVerified">Hãy chứng thực email trước khi đăng nhập</string>
    <string name="toastRegisterSuccess">Đăng ký thành công</string>
    <string name="toastRegisterFail">Đăng ký thất bại</string>
    <string name="toastEmptyEditText">Hãy điền vào tất cả ô</string>
    <string name="toastSendEmailSuccess">Đã gửi email thay đổi mật\nHãy kiểm tra hộp thư</string>
    <string name="toastSendEmailFail">Không thể gửi email thay đổi mật khẩu</string>
    <string name="labelForgotPassword">Quên mật khẩu?</string>
    <string name="labelCreateNewAccount">Tạo tài khoản mới</string>

    <!-- For Doctor Page -->
    <string name="labelAppoinmentList">CUỘC HẸN</string>
    <string name="labelScheduled">XẾP LỊCH</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- For Admin Page -->
    <string name="labelDoctors">BÁC SĨ</string>
    <string name="labelPatients">BỆNH NHÂN</string>
    <string name="labelAllUsers">TẤT CẢ</string>
    <string name="labelAccount">TÀI KHOẢN</string>
    <string name="labelUsers">NGƯỜI DÙNG</string>
    <string name="description">Description</string>
    <string name="admin_name">Lumia Lumifa</string>
</resources>