<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:contentDescription="This is scrollview"
    tools:context=".Fragment.FragmentUserHomeView">
    <LinearLayout
        android:id="@+id/viewUserHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">
        <LinearLayout
            android:id="@+id/titleHomeLL"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="2"
            android:background="@drawable/gradient_color_1">
            <TextView
                android:id="@+id/titleHomePage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/title_homepage"
                android:textColor="@color/red"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>
        <GridLayout
            android:id="@+id/OptionsGL"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_weight="8"
            android:background="@color/bluepastel"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:columnCount="2"
            android:rowCount="2">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardbtnSearch"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/teal_200"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/search"
                        app:tint="@color/dark_blue" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelSearch"
                        android:textColor="@color/dark_blue"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardbtnDoctor"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/teal_200"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/doctor"
                        app:tint="@color/dark_blue" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelDoctor"
                        android:textColor="@color/dark_blue"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardbtnAppoinment"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/teal_200"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/appoinment"
                        app:tint="@color/dark_blue" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelAppoinment"
                        android:textColor="@color/dark_blue"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardbtnAbout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/teal_200"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/about"
                        app:tint="@color/dark_blue" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelAbout"
                        android:textColor="@color/dark_blue"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardbtnHistory"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/teal_200"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/history"
                        app:tint="@color/dark_blue" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelHistory"
                        android:textColor="@color/dark_blue"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardbtnSetting"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/teal_200"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/setting"
                        app:tint="@color/dark_blue" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelSetting"
                        android:textColor="@color/dark_blue"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>
    </LinearLayout>

</ScrollView>